[gd_scene load_steps=35 format=2]

[ext_resource path="res://enemies/Hellcave/Natas/float.png" type="Texture" id=1]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0002.png" type="Texture" id=2]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0000.png" type="Texture" id=3]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0004.png" type="Texture" id=4]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0006.png" type="Texture" id=5]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0007.png" type="Texture" id=6]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0009.png" type="Texture" id=7]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0010.png" type="Texture" id=8]
[ext_resource path="res://enemies/Hellcave/Natas/smack.png" type="Texture" id=9]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0008.png" type="Texture" id=10]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0001.png" type="Texture" id=11]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0003.png" type="Texture" id=12]
[ext_resource path="res://enemies/library/animations/LivingArmor/ArmorIdle_0005.png" type="Texture" id=13]
[ext_resource path="res://enemies/Hellcave/Natas/fire.png" type="Texture" id=14]
[ext_resource path="res://enemies/Hellcave/Natas/natass.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 825.901

[sub_resource type="CapsuleShape2D" id=3]
radius = 53.1997
height = 92.9756

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 155.607, 96.1058 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 35.9753
height = 289.271

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 81.3241, 58.1491 )

[sub_resource type="Animation" id=7]
length = 0.25
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "fire"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "swing"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=15]
states/fire/node = SubResource( 8 )
states/fire/position = Vector2( 443, 169 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 206, 124 )
states/swing/node = SubResource( 10 )
states/swing/position = Vector2( 374, 21 )
transitions = [ "idle", "swing", SubResource( 11 ), "idle", "fire", SubResource( 12 ), "fire", "idle", SubResource( 13 ), "swing", "idle", SubResource( 14 ) ]
start_node = "idle"
graph_offset = Vector2( -60, -95 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="Animation" id=17]
length = 0.833333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16.4217, -8.20993 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("smack_box:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
length = 0.416667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.25, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("smack_box:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
length = 0.833333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("smack_box:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.333333, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("smack_box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.333333, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:canmove")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.833333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:vframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 9 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -36.3589 ) ]
}

[node name="natas" type="KinematicBody2D" groups=[
"baddies",
]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 2
frame = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
frames = SubResource( 1 )
frame = 6

[node name="line_of_sight" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="circle" type="CollisionShape2D" parent="line_of_sight"]
visible = false
shape = SubResource( 2 )

[node name="damage_radius" type="Area2D" parent="."]
position = Vector2( -1.83841, -4.00107 )
monitoring = false
collision_layer = 32
collision_mask = 48

[node name="circle" type="CollisionShape2D" parent="damage_radius"]
shape = SubResource( 3 )

[node name="hit_box" type="Area2D" parent="."]
position = Vector2( 11.7355, -13.7846 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 4 )

[node name="smack_box" type="Area2D" parent="."]
visible = false
monitoring = false
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="smack_box"]
position = Vector2( 6.56136, -21.7851 )
rotation = 1.44339
shape = SubResource( 5 )

[node name="target_zone" type="Area2D" parent="."]
position = Vector2( 0, 40.97 )
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="target_zone"]
position = Vector2( 125.594, -63.0802 )
shape = SubResource( 6 )

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/took_damage = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 17 )
anims/idle = SubResource( 18 )
anims/swing = SubResource( 19 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -20, 70 )
cast_to = Vector2( -50, 0 )

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 21, 70 )
cast_to = Vector2( 50, 0 )

[node name="topleft" type="RayCast2D" parent="."]
position = Vector2( -20, -30 )
cast_to = Vector2( -50, 0 )

[node name="topright" type="RayCast2D" parent="."]
position = Vector2( 21, -30 )
cast_to = Vector2( 50, 0 )

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 0, 56 )

[node name="fireball_timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="line_of_sight" to="." method="_on_line_of_sight_body_entered"]
[connection signal="body_exited" from="line_of_sight" to="." method="_on_line_of_sight_body_exited"]
[connection signal="body_entered" from="damage_radius" to="." method="_on_damage_radius_body_entered"]
[connection signal="body_entered" from="smack_box" to="." method="_on_smack_box_body_entered"]
[connection signal="body_entered" from="target_zone" to="." method="_on_target_zone_body_entered"]
[connection signal="timeout" from="fireball_timer" to="." method="_on_fireball_timer_timeout"]
